completed popular course section in index page

--- a/projects/css-projects/multipage-education-school-website/src/index.html
+++ b/projects/css-projects/multipage-education-school-website/src/index.html
@@ -144,6 +144,52 @@
         </div>
       </div>
     </section>
+    <!-- ========================================END OF CATEGORIES====================================================== -->
+
+    <section class="courses">
+      <h2>Our Popular Courses</h2>
+      <div class="container courses__container">
+        <article class="course">
+          <div class="course__image">
+            <img src="../images/course1.jpg" alt="course-1-image" />
+          </div>
+          <div class="course__info">
+            <h4>Responsive Social Media Website UI Design</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+              aperiam sunt, sequi possimus vero quidem.
+            </p>
+            <a href="#" class="btn btn-primary">Learn More</a>
+          </div>
+        </article>
+        <article class="course">
+          <div class="course__image">
+            <img src="../images/course2.jpg" alt="course-1-image" />
+          </div>
+          <div class="course__info">
+            <h4>Responsive Social Media Website UI Design</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+              aperiam sunt, sequi possimus vero quidem.
+            </p>
+            <a href="#" class="btn btn-primary">Learn More</a>
+          </div>
+        </article>
+        <article class="course">
+          <div class="course__image">
+            <img src="../images/course3.jpg" alt="course-1-image" />
+          </div>
+          <div class="course__info">
+            <h4>Responsive Social Media Website UI Design</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+              aperiam sunt, sequi possimus vero quidem.
+            </p>
+            <a href="#" class="btn btn-primary">Learn More</a>
+          </div>
+        </article>
+      </div>
+    </section>
 
     <script src="./main.js" async></script>
   </body>
