completed homepage for desktop application

--- a/projects/css-projects/multipage-education-school-website/src/index.html
+++ b/projects/css-projects/multipage-education-school-website/src/index.html
@@ -20,15 +20,24 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+
+    <!-- SWIPER JS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
     <link rel="stylesheet" href="./css/style.css" />
 
     <title>Responsive Educational Website</title>
   </head>
+
   <body>
     <nav>
       <!-- * This container class will general class for many sections which will helps us to center horizontally -->
       <div class="container nav__container">
-        <a href="index.html"><h4>EGATOR</h4></a>
+        <a href="index.html">
+          <h4>EGATOR</h4>
+        </a>
         <ul class="nav__menu">
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
@@ -190,7 +199,281 @@
         </article>
       </div>
     </section>
+    <!-- ========================================END OF Courses====================================================== -->
 
+    <section class="faqs">
+      <h2>Frequently Asked Questions</h2>
+      <div class="container faqs__container">
+        <article class="faq">
+          <span class="faq__icon"><i class="fa-solid fa-plus"></i></span>
+          <div class="question__answer">
+            <h4>How do I know the right course for me?</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore
+              voluptatem itaque id ut quod harum iste cupiditate reprehenderit
+              cum corporis corrupti aliquam mollitia laborum facere vitae, ipsa
+              architecto assumenda exercitationem?
+            </p>
+          </div>
+        </article>
+        <article class="faq">
+          <span class="faq__icon"><i class="fa-solid fa-plus"></i></span>
+          <div class="question__answer">
+            <h4>How do I know the right course for me?</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore
+              voluptatem itaque id ut quod harum iste cupiditate reprehenderit
+              cum corporis corrupti aliquam mollitia laborum facere vitae, ipsa
+              architecto assumenda exercitationem?
+            </p>
+          </div>
+        </article>
+        <article class="faq">
+          <span class="faq__icon"><i class="fa-solid fa-plus"></i></span>
+          <div class="question__answer">
+            <h4>How do I know the right course for me?</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore
+              voluptatem itaque id ut quod harum iste cupiditate reprehenderit
+              cum corporis corrupti aliquam mollitia laborum facere vitae, ipsa
+              architecto assumenda exercitationem?
+            </p>
+          </div>
+        </article>
+        <article class="faq">
+          <span class="faq__icon"><i class="fa-solid fa-plus"></i></span>
+          <div class="question__answer">
+            <h4>How do I know the right course for me?</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore
+              voluptatem itaque id ut quod harum iste cupiditate reprehenderit
+              cum corporis corrupti aliquam mollitia laborum facere vitae, ipsa
+              architecto assumenda exercitationem?
+            </p>
+          </div>
+        </article>
+        <article class="faq">
+          <span class="faq__icon"><i class="fa-solid fa-plus"></i></span>
+          <div class="question__answer">
+            <h4>How do I know the right course for me?</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore
+              voluptatem itaque id ut quod harum iste cupiditate reprehenderit
+              cum corporis corrupti aliquam mollitia laborum facere vitae, ipsa
+              architecto assumenda exercitationem?
+            </p>
+          </div>
+        </article>
+        <article class="faq">
+          <span class="faq__icon"><i class="fa-solid fa-plus"></i></span>
+          <div class="question__answer">
+            <h4>How do I know the right course for me?</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore
+              voluptatem itaque id ut quod harum iste cupiditate reprehenderit
+              cum corporis corrupti aliquam mollitia laborum facere vitae, ipsa
+              architecto assumenda exercitationem?
+            </p>
+          </div>
+        </article>
+        <article class="faq">
+          <span class="faq__icon"><i class="fa-solid fa-plus"></i></span>
+          <div class="question__answer">
+            <h4>How do I know the right course for me?</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore
+              voluptatem itaque id ut quod harum iste cupiditate reprehenderit
+              cum corporis corrupti aliquam mollitia laborum facere vitae, ipsa
+              architecto assumenda exercitationem?
+            </p>
+          </div>
+        </article>
+        <article class="faq">
+          <span class="faq__icon"><i class="fa-solid fa-plus"></i></span>
+          <div class="question__answer">
+            <h4>How do I know the right course for me?</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore
+              voluptatem itaque id ut quod harum iste cupiditate reprehenderit
+              cum corporis corrupti aliquam mollitia laborum facere vitae, ipsa
+              architecto assumenda exercitationem?
+            </p>
+          </div>
+        </article>
+      </div>
+    </section>
+
+    <!-- ========================================END of FAQs============================================================= -->
+
+    <section>
+      <div class="container testimonials__container swiper">
+        <h2>Student's Testimonials</h2>
+        <div class="testimonials swiper-wrapper">
+          <article class="testimonial swiper-slide">
+            <div class="avatar">
+              <img src="../images/avatar1.jpg" />
+            </div>
+            <div class="testimonial__info">
+              <h5>Diana Prince</h5>
+              <small>Student</small>
+            </div>
+            <div class="testimonial__body">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+                ad eligendi nesciunt autem dolorem, laborum harum. Perferendis
+                incidunt amet unde minus vitae odio non quia!
+              </p>
+            </div>
+          </article>
+          <article class="testimonial swiper-slide">
+            <div class="avatar">
+              <img src="../images/avatar2.jpg" />
+            </div>
+            <div class="testimonial__info">
+              <h5>Diana Prince</h5>
+              <small>Student</small>
+            </div>
+            <div class="testimonial__body">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+                ad eligendi nesciunt autem dolorem, laborum harum. Perferendis
+                incidunt amet unde minus vitae odio non quia!
+              </p>
+            </div>
+          </article>
+          <article class="testimonial swiper-slide">
+            <div class="avatar">
+              <img src="../images/avatar3.jpg" />
+            </div>
+            <div class="testimonial__info">
+              <h5>Diana Prince</h5>
+              <small>Student</small>
+            </div>
+            <div class="testimonial__body">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+                ad eligendi nesciunt autem dolorem, laborum harum. Perferendis
+                incidunt amet unde minus vitae odio non quia!
+              </p>
+            </div>
+          </article>
+          <article class="testimonial swiper-slide">
+            <div class="avatar">
+              <img src="../images/avatar4.jpg" />
+            </div>
+            <div class="testimonial__info">
+              <h5>Diana Prince</h5>
+              <small>Student</small>
+            </div>
+            <div class="testimonial__body">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+                ad eligendi nesciunt autem dolorem, laborum harum. Perferendis
+                incidunt amet unde minus vitae odio non quia!
+              </p>
+            </div>
+          </article>
+          <article class="testimonial swiper-slide">
+            <div class="avatar">
+              <img src="../images/avatar5.jpg" />
+            </div>
+            <div class="testimonial__info">
+              <h5>Diana Prince</h5>
+              <small>Student</small>
+            </div>
+            <div class="testimonial__body">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+                ad eligendi nesciunt autem dolorem, laborum harum. Perferendis
+                incidunt amet unde minus vitae odio non quia!
+              </p>
+            </div>
+          </article>
+        </div>
+        <div class="swiper-pagination"></div>
+      </div>
+    </section>
+
+    <!-- ========================================END of TESTIMONIAL========================================================== -->
+
+    <footer>
+      <div class="container footer__container">
+        <div class="footer__1">
+          <a href="index.html">
+            <h4>EGATOR</h4>
+          </a>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id ex
+            molestiae debitis obcaecati.
+          </p>
+        </div>
+        <div class="footer__2">
+          <h4>Permalinks</h4>
+          <ul class="permalinks">
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="courses.html">Courses</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </div>
+        <div class="footer__3">
+          <h4>Primacy</h4>
+          <ul class="primacy">
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Terms and conditions</a></li>
+            <li><a href="#">Refund Policy</a></li>
+          </ul>
+        </div>
+        <div class="footer__4">
+          <h4>Contact Us</h4>
+          <div>
+            <p>+01 234 567 8910</p>
+            <p>atomicbreath64@gmail.com</p>
+          </div>
+          <ul class="footer__socials">
+            <li>
+              <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
+    <div class="footer__copyright">
+      <p>Copyright &copy; Learning</p>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./main.js" async></script>
+    <script>
+      const swiper = new Swiper('.swiper', {
+        cssMode: true,
+        slidesPerView: 1,
+        spaceBetween: 30,
+        pagination: {
+          el: '.swiper-pagination',
+          clickable: true,
+          mousewheel: true,
+          keyboard: true,
+        },
+        // * responsive break pointz
+        breakpoints: {
+          700: {
+            slidesPerView: 2,
+          },
+          1200: {
+            slidesPerView: 3,
+          },
+        },
+      });
+    </script>
   </body>
 </html>
