completed home page for all devices

--- a/projects/css-projects/1.education-school-website/src/index.html
+++ b/projects/css-projects/1.education-school-website/src/index.html
@@ -26,7 +26,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./style.css" />
 
     <title>Responsive Educational Website</title>
   </head>
@@ -46,7 +46,7 @@
         </ul>
         <!-- * This two buttons will be only available on mobile and tablet devices -->
         <button id="open-menu-btn"><i class="fa-solid fa-bars"></i></button>
-        <button id="open-menu-btn"><i class="fa-solid fa-xmark"></i></button>
+        <button id="close-menu-btn"><i class="fa-solid fa-xmark"></i></button>
       </div>
     </nav>
     <!-- ========================================END OF NAVBAR====================================================== -->
