completed time tracking assignment static version for large screen

--- a/projects/css-projects/3.time-tracking-dashboard-main/index.html
+++ b/projects/css-projects/3.time-tracking-dashboard-main/index.html
@@ -24,115 +24,128 @@
   <body>
     <section class="dashboard">
       <div class="dashboard__container">
-        <div class="container__element subject__container">
-          <div class="subject__main">
-            <div class="subject__avatar">
-              <img src="./images/image-jeremy.png" alt="" />
+        <div class="dashboard__maincard">
+          <div class="dashboard__maincard-top">
+            <div class="dashboard__maincard-top-image">
+              <img src="./images/image-jeremy.png" alt="Jeremy Robson" />
             </div>
-            <div class="subject__desc">
+            <div class="dashboard__maincard-top-info">
               <p>Report for</p>
-              <div class="subject__name subject__fname"><p>Jeremy</p></div>
-              <div class="subject__name subject__lname"><p>Robson</p></div>
+              <div class="dashboard__maincard-top-name">
+                <p>Jeremy Robson</p>
+              </div>
             </div>
           </div>
-          <div class="subject__reports">
-            <div class="reports__daily"><a href="#">Daily</a></div>
-            <div class="reports__weekly"><a href="#">Weekly</a></div>
-            <div class="reports__monthly"><a href="#">Monthly</a></div>
+          <div class="dashboard__maincard-bottom">
+            <div class="dashboard__maincard-bottom-item">
+              <a href="#">Daily</a>
+            </div>
+            <div class="dashboard__maincard-bottom-item">
+              <a href="#">Weekly</a>
+            </div>
+            <div class="dashboard__maincard-bottom-item">
+              <a href="#">Monthly</a>
+            </div>
           </div>
         </div>
 
-        <div class="container__element">
-          <div class="top"></div>
-          <div class="bottom">
-            <div class="activity">
-              <span class="activity__name">Work</span>
-              <span class="icon"></span>
+        <div class="dashboard__card work-card">
+          <div class="work-card__info">
+            <div class="card__info-activity">
+              <span class="card__info-activity-name">Work</span>
+              <div class="card__info-activity-image">
+                <img src="./images/icon-ellipsis.svg" />
+              </div>
             </div>
-            <div class="time">
+            <div class="card__info-time">
               <p>5hrs</p>
             </div>
-            <div class="status">
+            <div class="card__info-status">
               <p>Previous - 7hrs</p>
             </div>
           </div>
         </div>
 
-        <div class="container__element">
-          <div class="top"></div>
-          <div class="bottom">
-            <div class="activity">
-              <span class="activity__name">Play</span>
-              <span class="icon"></span>
+        <div class="dashboard__card play-card">
+          <div class="play-card__info">
+            <div class="card__info-activity">
+              <span class="card__info-activity-name">Play</span>
+              <div class="card__info-activity-image">
+                <img src="./images/icon-ellipsis.svg" />
+              </div>
             </div>
-            <div class="time">
-              <p>1hr</p>
+            <div class="card__info-time">
+              <p>1hrs</p>
             </div>
-            <div class="status">
+            <div class="card__info-status">
               <p>Previous - 2hrs</p>
             </div>
           </div>
         </div>
 
-        <div class="container__element">
-          <div class="top"></div>
-          <div class="bottom">
-            <div class="activity">
-              <span class="activity__name">Study</span>
-              <span class="icon"></span>
+        <div class="dashboard__card study-card">
+          <div class="study-card__info">
+            <div class="card__info-activity">
+              <span class="card__info-activity-name">Study</span>
+              <div class="card__info-activity-image">
+                <img src="./images/icon-ellipsis.svg" />
+              </div>
             </div>
-            <div class="time">
-              <p>0hr</p>
+            <div class="card__info-time">
+              <p>0hrs</p>
             </div>
-            <div class="status">
+            <div class="card__info-status">
               <p>Previous - 1hrs</p>
             </div>
           </div>
         </div>
 
-        <div class="container__element">
-          <div class="top"></div>
-          <div class="bottom">
-            <div class="activity">
-              <span class="activity__name">Exercise</span>
-              <span class="icon"></span>
+        <div class="dashboard__card exercise-card">
+          <div class="exercise-card__info">
+            <div class="card__info-activity">
+              <span class="card__info-activity-name">Exercise</span>
+              <div class="card__info-activity-image">
+                <img src="./images/icon-ellipsis.svg" />
+              </div>
             </div>
-            <div class="time">
-              <p>1hr</p>
+            <div class="card__info-time">
+              <p>1hrs</p>
             </div>
-            <div class="status">
+            <div class="card__info-status">
               <p>Previous - 1hrs</p>
             </div>
           </div>
         </div>
 
-        <div class="container__element">
-          <div class="top"></div>
-          <div class="bottom">
-            <div class="activity">
-              <span class="activity__name">Social</span>
-              <span class="icon"></span>
+        <div class="dashboard__card social-card">
+          <div class="social-card__info">
+            <div class="card__info-activity">
+              <span class="card__info-activity-name">Social</span>
+              <div class="card__info-activity-image">
+                <img src="./images/icon-ellipsis.svg" />
+              </div>
             </div>
-            <div class="time">
-              <p>1hr</p>
+            <div class="card__info-time">
+              <p>1hrs</p>
             </div>
-            <div class="status">
+            <div class="card__info-status">
               <p>Previous - 3hrs</p>
             </div>
           </div>
         </div>
 
-        <div class="container__element">
-          <div class="top"></div>
-          <div class="bottom">
-            <div class="activity">
-              <span class="activity__name">Self Care</span>
-              <span class="icon"></span>
+        <div class="dashboard__card selfcare-card">
+          <div class="selfcare-card__info">
+            <div class="card__info-activity">
+              <span class="card__info-activity-name">Self Care</span>
+              <div class="card__info-activity-image">
+                <img src="./images/icon-ellipsis.svg" />
+              </div>
             </div>
-            <div class="time">
-              <p>0hr</p>
+            <div class="card__info-time">
+              <p>0hrs</p>
             </div>
-            <div class="status">
+            <div class="card__info-status">
               <p>Previous - 1hrs</p>
             </div>
           </div>
@@ -140,11 +153,11 @@
       </div>
     </section>
 
-    <!-- <div class="attribution">
+    <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Scorpion Lone Wolf</a>.
-    </div> -->
+    </div>
   </body>
 </html>
