added color for active button when clicked using js

--- a/projects/css-projects/3.time-tracking-dashboard-main/index.html
+++ b/projects/css-projects/3.time-tracking-dashboard-main/index.html
@@ -38,13 +38,13 @@
           </div>
           <div class="dashboard__maincard-bottom">
             <div class="dashboard__maincard-bottom-item">
-              <a href="#">Daily</a>
+              <a id="dashboard__maincard-daily" href="#">Daily</a>
             </div>
             <div class="dashboard__maincard-bottom-item">
-              <a href="#">Weekly</a>
+              <a id="dashboard__maincard-weekly" href="#">Weekly</a>
             </div>
             <div class="dashboard__maincard-bottom-item">
-              <a href="#">Monthly</a>
+              <a id="dashboard__maincard-monthly" href="#">Monthly</a>
             </div>
           </div>
         </div>
@@ -159,5 +159,7 @@
         >Frontend Mentor</a
       >. Coded by <a href="#">Scorpion Lone Wolf</a>.
     </div>
+
+    <script src="./script.js"></script>
   </body>
 </html>
