--- a/projects/css-projects/3.time-tracking-dashboard-main/index.html
+++ b/projects/css-projects/3.time-tracking-dashboard-main/index.html
@@ -153,12 +153,12 @@
       </div>
     </section>
 
-    <div class="attribution">
+    <!-- <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Scorpion Lone Wolf</a>.
-    </div>
+    </div> -->
 
     <script src="./script.js"></script>
   </body>
