--- a/tech-projects/CSS/4.calender-component/index.html
+++ b/tech-projects/CSS/4.calender-component/index.html
@@ -10,6 +10,12 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playwrite+NG+Modern:wght@100..400&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Calender Component</title>
   </head>
@@ -26,7 +32,29 @@
             <p class="card__top-temp">26°C</p>
           </div>
         </div>
-        <div class="card__bottom"></div>
+        <div class="card__bottom">
+          <div class="card__bottom-top">
+            <button class="left-arrow">
+              <i class="fa-solid fa-circle-arrow-left"></i>
+            </button>
+            <span>...</span>
+            <button class="right-arrow">
+              <i class="fa-solid fa-circle-arrow-right"></i>
+            </button>
+          </div>
+          <div class="card__bottom-down">
+            <div class="card__down-weekdays">
+              <span>Sun</span>
+              <span>Mon</span>
+              <span>Tue</span>
+              <span>Wed</span>
+              <span>Thu</span>
+              <span>Fri</span>
+              <span>Sat</span>
+            </div>
+            <div class="card__down-dates"></div>
+          </div>
+        </div>
       </div>
     </div>
     <script src="./script.js"></script>
