--- a/TECH-PROJECTS/JS/Tic-Tac-Toe/index.html
+++ b/TECH-PROJECTS/JS/Tic-Tac-Toe/index.html
@@ -15,6 +15,7 @@
     <title>Tic Tac Toe Game</title>
   </head>
   <body>
+    <div class="current-turn"></div>
     <div class="container">
       <div class="items box-1"></div>
       <div class="items box-2"></div>
